# self_doubt_cot

./: BaselineAB.ipynb  LICENSE  README.md  pyproject.toml
runs/2025-08-09/: gsm8k500_deepseek_r1d_qwen1p5b_baselineA_thinking.jsonl  gsm8k500_deepseek_r1d_qwen1p5b_indices.json
