[project]
name = "self-doubt-cot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "outlines>=1.2.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
]
